--- a/.github/workflows/download_futures_vision_data.yml
+++ b/.github/workflows/download_futures_vision_data.yml
@@ -26,7 +26,6 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-
           CATEGORY=${{ matrix.category }}
           SYMBOL=${{ matrix.symbol }}
           START="2020-01-01"
@@ -34,14 +33,16 @@ jobs:
           BASE="data/futures/um/daily/${CATEGORY}/${SYMBOL}"
           mkdir -p "$BASE"
 
+          # ───────────────────────────────────────────────────────────────
           # 1) indexPriceKlines → einfacher Tages-Loop
+          # ───────────────────────────────────────────────────────────────
           if [[ "$CATEGORY" == "indexPriceKlines" ]]; then
             cur="$START"
             while [[ "$cur" < "$END" || "$cur" == "$END" ]]; do
               DATE=$(date -d "$cur" +%Y-%m-%d)
               ZIP="${SYMBOL}-indexPriceKlines-1d-${DATE}.zip"
               URL="https://data.binance.vision/data/futures/um/daily/indexPriceKlines/${SYMBOL}/${ZIP}"
-              echo "→ Fetching $ZIP"
+              echo "→ Fetching indexPriceKlines $DATE"
               if curl -sSf "$URL" -o "$BASE/$ZIP"; then
                 unzip -o "$BASE/$ZIP" -d "$BASE" && rm "$BASE/$ZIP"
                 echo "   ✅ unpacked $ZIP"
@@ -53,41 +54,34 @@ jobs:
             exit 0
           fi
 
-          # 2) metrics, aggTrades & bookTicker → Quarter-Verzeichnisse
-          echo "→ Listing quarters for $CATEGORY/$SYMBOL"
-          # HTML parse href="SYMBOL_YYMMDD/"
+          # ───────────────────────────────────────────────────────────────
+          # 2) aggTrades, bookTicker & metrics → Quarter-Ordner
+          # ───────────────────────────────────────────────────────────────
+          LIST_URL="https://data.binance.vision/data/futures/um/daily/${CATEGORY}/${SYMBOL}/"
+          echo "→ Listing quarters at $LIST_URL"
+          # Quarter-Verzeichnisse wie SYMBOL_230331
           quarters=(
-            $(curl -s "https://data.binance.vision/data/futures/um/daily/${CATEGORY}/${SYMBOL}/" \
-              | grep -oP '(?<=href=")'${SYMBOL}'_[0-9]{6}(?=/")')
+            $(curl -s "$LIST_URL" \
+              | grep -oP '(?<=href=")'${SYMBOL}'_[0-9]{6}(?=/")' || true)
           )
+
           for Q in "${quarters[@]}"; do
-            QDIR="https://data.binance.vision/data/futures/um/daily/${CATEGORY}/${SYMBOL}/${Q}/"
+            QDIR="${LIST_URL}${Q}/"
             echo "  → Quarter $Q"
-            # liste alle ZIP-Dateien im Quarter
             files=(
               $(curl -s "$QDIR" \
-                | grep -oP "${SYMBOL}-${CATEGORY}-[0-9]{4}-[0-9]{2}-[0-9]{2}\.zip" \
-                  || grep -oP "${SYMBOL}-[0-9]{4}-[0-9]{2}-[0-9]{2}\.zip")
+                | grep -oP '(?<=href=")[^"]+\.zip' || true)
             )
             for F in "${files[@]}"; do
-              # DATE extrahieren (YYYY-MM-DD)
-              if [[ "$CATEGORY" == "metrics" ]]; then
-                # metrics zips heißen SYMBOL-YYYY-MM-DD.zip
-                DATE=$(echo $F | grep -oP '[0-9]{4}-[0-9]{2}-[0-9]{2}')
-                ZIP="$F"
-                URL="${QDIR}${ZIP}"
-              else
-                # aggTrades/bookTicker: SYMBOL-CATEGORY-YYYY-MM-DD.zip
-                DATE=$(echo $F | grep -oP '[0-9]{4}-[0-9]{2}-[0-9]{2}')
-                ZIP="$F"
-                URL="${QDIR}${ZIP}"
-              fi
-
-              # Filter auf unseren Zeitraum
+              # Datum aus Dateinamen (YYYY-MM-DD)
+              DATE=$(echo "$F" | grep -oP '[0-9]{4}-[0-9]{2}-[0-9]{2}' || true)
+              [[ -z "$DATE" ]] && continue
+              # nur im Zeitbereich
               if [[ "$DATE" < "$START" || "$DATE" > "$END" ]]; then
                 continue
               fi
-
+              ZIP="$F"
+              URL="${QDIR}${ZIP}"
               echo "    → Fetching $ZIP"
               if curl -sSf "$URL" -o "$BASE/$ZIP"; then
                 unzip -o "$BASE/$ZIP" -d "$BASE" && rm "$BASE/$ZIP"
@@ -106,8 +100,8 @@ jobs:
 
   aggregate_and_push:
     name: 🚀 Aggregate & Commit All Daily Data
-    runs-on: ubuntu-latest
     needs: download
+    runs-on: ubuntu-latest
 
     steps:
       - name: 🛎️ Checkout fresh
