--- a/.github/workflows/download_bookTicker.yml
+++ b/.github/workflows/download_bookTicker.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           set -euo pipefail
           SYMBOL=${{ matrix.symbol }}
-          START="2020-01-01"
+          START="2023-05-01"            # ← earliest available
           END=$(date -I -d "yesterday")
           BASE="data/futures/um/daily/bookTicker/${SYMBOL}"
           mkdir -p "$BASE"
@@ -43,6 +43,7 @@ jobs:
             fi
             cur=$(date -I -d "$cur +1 day")
           done
+
           echo "📊 Disk usage after bookTicker download:"
           df -h .
           du -sh "$BASE" || true
