--- a/.github/workflows/download_metrics.yml
+++ b/.github/workflows/download_metrics.yml
@@ -1,5 +1,3 @@
-# .github/workflows/download_metrics.yml
-
 name: 📥 Download & Commit metrics
 
 on:
@@ -80,7 +78,8 @@ jobs:
           set -euo pipefail
           mkdir -p data/futures/um/daily/metrics
           find data-artifacts -type f | while read src; do
-            rel=${src#data-artifacts/}
+            # src = data-artifacts/data/futures/um/daily/metrics/...
+            rel=${src#data-artifacts/data/}
             dst="data/${rel}"
             mkdir -p "$(dirname "$dst")"
             mv "$src" "$dst"
