--- a/.github/workflows/download_indexPriceKlines.yml
+++ b/.github/workflows/download_indexPriceKlines.yml
@@ -1,5 +1,3 @@
-# .github/workflows/download_indexPriceKlines.yml
-
 name: 📥 Download & Commit indexPriceKlines (1h & 4h)
 
 on:
@@ -26,7 +24,6 @@ jobs:
         run: |
           set -euo pipefail
           SYMBOL=${{ matrix.symbol }}
-          # wir laden nach wie vor ab 2020-01-01 bis gestern
           START="2020-01-01"
           END=$(date -I -d "yesterday")
           INTERVALS=( "1h" "4h" )
@@ -90,7 +87,8 @@ jobs:
           set -euo pipefail
           mkdir -p data/futures/um/daily/indexPriceKlines
           find data-artifacts -type f | while read src; do
-            rel=${src#data-artifacts/}
+            # src = data-artifacts/data/futures/um/daily/indexPriceKlines/...
+            rel=${src#data-artifacts/data/}
             dst="data/${rel}"
             mkdir -p "$(dirname "$dst")"
             mv "$src" "$dst"
