--- a/.github/workflows/download_history.yml
+++ b/.github/workflows/download_history.yml
@@ -1,5 +1,6 @@
 name: 🔄 Full Download & Commit Historical Data
 
+# Manuelles Triggern – später auf schedule umstellen
 on:
   workflow_dispatch:
 
@@ -7,7 +8,6 @@ jobs:
   download_matrix:
     name: Download History ${{ matrix.symbol }} @ ${{ matrix.interval }}
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         symbol: [BTCUSDT, ETHUSDT, BNBUSDT, SOLUSDT, XRPUSDT, ENAUSDT]
@@ -21,15 +21,21 @@ jobs:
       - name: Install unzip (für funzip)
         run: sudo apt-get update && sudo apt-get install -y unzip
 
+      - name: Set Date Range
+        id: dates
+        run: |
+          # Gestern
+          YESTERDAY=$(date -d "yesterday" '+%Y-%m-%d')
+          # Erster Tag des Monats von YESTERDAY
+          START=$(date -d "$YESTERDAY" '+%Y-%m-01')
+          END="$YESTERDAY"
+          echo "START=$START" >> $GITHUB_ENV
+          echo "END=$END" >> $GITHUB_ENV
+
       - name: Download History Range
         shell: bash
         run: |
           chmod +x historical/download_history_range.sh
-
-          # Fixed-Range Full Download:
-          START="2020-01-01"
-          END="2025-05-07"
-
           echo "→ Downloading ${{ matrix.symbol }} @ ${{ matrix.interval }} from $START to $END"
           historical/download_history_range.sh \
             "${{ matrix.symbol }}" \
@@ -46,10 +52,9 @@ jobs:
           if-no-files-found: ignore
 
   aggregate_and_push:
-    name: 📦 Aggregate & Push All Historical
+    name: Aggregate & Push All Historical
     runs-on: ubuntu-latest
     needs: download_matrix
-
     env:
       GIT_USER: github-actions[bot]
       GIT_EMAIL: github-actions[bot]@users.noreply.github.com
@@ -70,15 +75,14 @@ jobs:
         shell: bash
         run: |
           for src in historical-artifacts/**/*.csv; do
-            # e.g. BNBUSDT/1h/BNBUSDT-1h-2025-05-07.csv
             rel=${src#historical-artifacts/}
             dst="historical/${rel}"
             if [ ! -f "$dst" ]; then
               mkdir -p "$(dirname "$dst")"
               mv "$src" "$dst"
-              echo "   ➕ Added $dst"
+              echo " ➕ Added $dst"
             else
-              echo "   ⏭ Skipped existing $dst"
+              echo " ⏭ Skipped existing $dst"
             fi
           done
 
@@ -91,8 +95,8 @@ jobs:
           git reset --mixed origin/main
           git add historical
           if ! git diff --cached --quiet; then
-            git commit -m "chore(history): full rebuild 2020-2025 [skip ci]"
+            git commit -m "chore(history): update ${START} → ${END} [skip ci]"
             git push origin HEAD:main
           else
-            echo "🚀 No changes to push"
+            echo " No changes to push"
           fi
