--- a/.github/workflows/download_history.yml
+++ b/.github/workflows/download_history.yml
@@ -1,8 +1,10 @@
-name: 🔄 Full Download & Commit Historical Data
+name: 🔄 Download & Commit Historical Klines
 
-# Manuelles Triggern – später auf schedule umstellen
 on:
   workflow_dispatch:
+  schedule:
+    # täglich 02:00 UTC
+    - cron: '0 2 * * *'
 
 jobs:
   download_matrix:
@@ -21,13 +23,21 @@ jobs:
       - name: Install unzip (für funzip)
         run: sudo apt-get update && sudo apt-get install -y unzip
 
-      - name: Set Date Range
+      - name: Determine Backfill Date Range
         id: dates
+        shell: bash
         run: |
-          # Gestern
           YESTERDAY=$(date -d "yesterday" '+%Y-%m-%d')
-          # Erster Tag des Monats von YESTERDAY
-          START=$(date -d "$YESTERDAY" '+%Y-%m-01')
+          TARGET_DIR="historical/${{ matrix.symbol }}/${{ matrix.interval }}"
+          if compgen -G "$TARGET_DIR/${{ matrix.symbol }}-${{ matrix.interval }}-*.csv" > /dev/null; then
+            LAST=$(find "$TARGET_DIR" -type f -name "${{ matrix.symbol }}-${{ matrix.interval }}-*.csv" \
+              | sed -E "s/.*${{ matrix.symbol }}-${{ matrix.interval }}-([0-9]{4}-[0-9]{2}-[0-9]{2})\.csv/\1/" \
+              | sort | tail -n1)
+            START=$(date -d "$LAST +1 day" '+%Y-%m-%d')
+          else
+            # noch kein File: nur gestern holen
+            START="$YESTERDAY"
+          fi
           END="$YESTERDAY"
           echo "START=$START" >> $GITHUB_ENV
           echo "END=$END" >> $GITHUB_ENV
@@ -47,17 +57,13 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: historical-${{ matrix.symbol }}-${{ matrix.interval }}
-          path: |
-            historical/${{ matrix.symbol }}/${{ matrix.interval }}/*.csv
+          path: historical/${{ matrix.symbol }}/${{ matrix.interval }}/*.csv
           if-no-files-found: ignore
 
   aggregate_and_push:
     name: Aggregate & Push All Historical
-    runs-on: ubuntu-latest
     needs: download_matrix
-    env:
-      GIT_USER: github-actions[bot]
-      GIT_EMAIL: github-actions[bot]@users.noreply.github.com
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout fresh
@@ -89,13 +95,13 @@ jobs:
       - name: Commit & Push
         shell: bash
         run: |
-          git config user.name "${GIT_USER}"
-          git config user.email "${GIT_EMAIL}"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git fetch origin main
           git reset --mixed origin/main
           git add historical
           if ! git diff --cached --quiet; then
-            git commit -m "chore(history): update ${START} → ${END} [skip ci]"
+            git commit -m "chore(history): backfill ${START}→${END} [skip ci]"
             git push origin HEAD:main
           else
             echo " No changes to push"
