--- a/.github/workflows/download_metrics.yml
+++ b/.github/workflows/download_metrics.yml
@@ -2,6 +2,9 @@ name: 📥 Download & Commit metrics
 
 on:
   workflow_dispatch:
+  schedule:
+    # täglich 02:00 UTC
+    - cron: '0 2 * * *'
 
 jobs:
   download:
@@ -13,27 +16,37 @@ jobs:
       max-parallel: 6
 
     steps:
-      - name: ️ Checkout repo
+      - name: Checkout repo
         uses: actions/checkout@v3
 
       - name: Install unzip & curl
         run: sudo apt-get update && sudo apt-get install -y unzip curl
 
-      - name: Download & extract metrics
+      - name: Download & extract metrics (Backfill)
         shell: bash
         run: |
           set -euo pipefail
           SYMBOL=${{ matrix.symbol }}
-          # Dynamisches Datum: 1. des Monats bis gestern
+
+          # yesterday
           YESTERDAY=$(date -I -d "yesterday")
-          START=$(date -d "$YESTERDAY" '+%Y-%m-01')
+          TARGET_DIR="historical_tech/metrics/${SYMBOL}"
+          if compgen -G "$TARGET_DIR/${SYMBOL}-metrics-*.csv" > /dev/null; then
+            LAST=$(find "$TARGET_DIR" -type f -name "${SYMBOL}-metrics-*.csv" \
+              | sed -E "s/.*${SYMBOL}-metrics-([0-9]{4}-[0-9]{2}-[0-9]{2})\.csv/\1/" \
+              | sort | tail -n1)
+            START=$(date -d "$LAST +1 day" '+%Y-%m-%d')
+          else
+            START="$YESTERDAY"
+          fi
           END="$YESTERDAY"
+
           BASE="data/futures/um/daily/metrics/${SYMBOL}"
           mkdir -p "$BASE"
 
           cur="$START"
           while [[ "$cur" < "$END" || "$cur" == "$END" ]]; do
-            DATE=$(date -d "$cur" +%Y-%m-%d)
+            DATE="$cur"
             ZIP="${SYMBOL}-metrics-${DATE}.zip"
             URL="https://data.binance.vision/data/futures/um/daily/metrics/${SYMBOL}/${ZIP}"
             echo "→ Fetching metrics $DATE"
@@ -48,10 +61,6 @@ jobs:
             cur=$(date -I -d "$cur +1 day")
           done
 
-          echo " Disk usage after metrics download:"
-          df -h .
-          du -sh "$BASE" || true
-
       - name: Upload metrics artifact
         uses: actions/upload-artifact@v4
         with:
@@ -64,7 +73,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: ️ Checkout fresh
+      - name: Checkout fresh
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
@@ -98,6 +107,6 @@ jobs:
           if git diff --cached --quiet; then
             echo "✅ No new metrics to commit"
           else
-            git commit -m "chore(data): import metrics [skip ci]"
+            git commit -m "chore(data): backfill metrics ${START}→${END} [skip ci]"
             git push origin HEAD:main
           fi
