--- a/.github/workflows/download_aggTrades.yml
+++ b/.github/workflows/download_aggTrades.yml
@@ -2,22 +2,35 @@ name: 📥 Backfill aggTrades → Feature Extraction
 
 on:
   workflow_dispatch:
+    inputs:
+      start_date:
+        description: 'Startdatum für History (YYYY-MM-DD)'
+        required: true
+        default: '2020-01-01'
+      end_date:
+        description: 'Enddatum für History (YYYY-MM-DD), leer = gestern'
+        required: false
+        default: ''
 
 jobs:
   backfill-aggTrades:
+    # läuft auf deinem Self-Hosted Runner
     runs-on: [self-hosted, linux]
 
     steps:
+      # 1) Checkout des vollständigen Repos
       - name: Checkout repo
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
+      # 2) System-Pakete
       - name: Install system packages
         run: |
           sudo apt-get update
           sudo apt-get install -y unzip python3-venv wget
 
+      # 3) Python-venv erstellen und Abhängigkeiten installieren
       - name: Create & activate Python venv
         run: |
           python3 -m venv .venv
@@ -25,30 +38,49 @@ jobs:
           pip install --upgrade pip
           pip install pandas numpy pyarrow
 
+      # 4) Download & Unzip aller aggTrades-ZIPs von start_date bis end_date (bzw. gestern)
       - name: Download & unzip aggTrades
         run: |
+          # Inputs lesen, end_date default auf gestern setzen
+          START="${{ github.event.inputs.start_date }}"
+          END="${{ github.event.inputs.end_date }}"
+          if [ -z "$END" ]; then END=$(date --date="yesterday" +%F); fi
+
           mkdir -p /tmp/agg
           cd /tmp/agg
+
           SYMBOLS=(BTCUSDT ETHUSDT BNBUSDT ADAUSDT SOLUSDT XRPUSDT)
-          for S in "${SYMBOLS[@]}"; do
-            ZIP="${S}-aggTrades-$(date +%F).zip"
-            URL="https://data.binance.vision/data/futures/aggTrades/${S}/${ZIP}"
-            echo "Downloading $URL"
-            wget -q "$URL" -O "$ZIP" || { echo "ERROR downloading $ZIP"; exit 1; }
-            unzip -o "$ZIP" -d "$S"
+          current="$START"
+          # Schleife über alle Tage
+          while [[ "$current" < "$END" ]] || [[ "$current" == "$END" ]]; do
+            for S in "${SYMBOLS[@]}"; do
+              ZIP="${S}-aggTrades-${current}.zip"
+              # Neuer Pfad zu den UM-Futures
+              URL="https://data.binance.vision/data/futures/um/daily/aggTrades/${S}/${ZIP}"
+              echo "Downloading $URL"
+              if wget -q "$URL" -O "$ZIP"; then
+                unzip -o "$ZIP" -d "$S"
+              else
+                echo "WARNING: $ZIP not found, skipping"
+              fi
+            done
+            current=$(date --date="$current + 1 day" +%F)
           done
 
+      # 5) Feature-Extraktion im venv
       - name: Extract aggTrades Features
         run: |
           . .venv/bin/activate
           mkdir -p historical_tech/aggTrades/features
           python scripts/extract_aggTrades_features.py \
             --input-dir /tmp/agg \
-            --output-file historical_tech/aggTrades/features/aggTrades_$(date +%F).parquet
+            --output-file historical_tech/aggTrades/features/aggTrades_${START}_to_${END}.parquet
 
+      # 6) Cleanup der Rohdaten
       - name: Clean up raw data
         run: rm -rf /tmp/agg
 
+      # 7) Kompakte Features committen & pushen
       - name: Commit & Push Features
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -56,5 +88,5 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add historical_tech/aggTrades/features/*.parquet
-          git diff --cached --quiet || git commit -m "aggTrades Features $(date +%F)"
+          git diff --cached --quiet || git commit -m "aggTrades Features ${START}_to_${END}"
           git push origin HEAD:main
